2017-12-01  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (exec_ssh_cmd): Use ssh_channel_read_timeout().

2017-12-01  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* misc/network.c (open_sock_tcp): After some unsuccessfully attempts,
	the port is set to closed.

2017-11-23  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (exec_ssh_cmd): Attach session to a pseudo-terminal
	before executing the command. This ensures that long-running commands
	are properly terminated by the host on session disconnect.

2017-11-21  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/pluginscheduler.c (plugin_add): Check for NULL before calling
	g_strsplit during deprecated plugin check. Replace tabs with spaces.

2017-11-15  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_misc_funcs.c (nasl_gzip): Look for a new local variable
	into the lexic to select the header format, zlib or gzip.

2017-10-31  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start): Revert r29884.

2017-10-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (plugins_scheduler_stop): New function.
	(struct plugins_scheduler): Add stopped element.

	* src/pluginscheduler.h: Add function header.

	* src/attack.c (attack_host): Call plugins_scheduler_stop() if scan is
	stopped.

2017-10-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plug_fork_child): Remove debug messages.

2017-10-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_socket.c (nasl_open_privileged_socket): Set lowest_socket
	variable, to fix close() error message.

2017-10-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start): Send error message to client on
	reverse-lookup failure.

2017-10-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/nasl_plugins.c (check_nvti): New function.
	(nasl_plugin_add): Use new function.
